--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,44 @@
   align-items: center;
   justify-content: center;
 }
+
+.form {
+  width: 400px;
+  background: rgb(218, 223, 235);
+  padding: 20px;
+  border-radius: 10px;
+  margin: 0 auto;
+}
+.form-group {
+  margin-bottom: 6px;
+}
+.form-group label {
+  display: block;
+  margin-bottom: 6px;
+  font-size: 13px;
+}
+.form-group input {
+  width: 100%;
+  height: 35px;
+  border: solid 1px #ddd;
+  border-radius: 40px;
+}
+button {
+  width: 100%;
+  background: rgb(47, 74, 154);
+  color: #fff;
+  height: 45px;
+  border-radius: 100px;
+  border: none;
+}
+button:disabled {
+  opacity: 0.4;
+}
+.invalid {
+  font-size: 14px;
+  color: red;
+}
+.success {
+  font-size: 14px;
+  color: green;
+}
